--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,4 +27,4 @@ jobs:
           context: .
           push: true
           tags: |
-              "${{ github.repository }}:${{ github.sha }}"
+              "${{ github.repository }}"
