--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,6 +4,7 @@ name: Docker build and push CI
 on:
   push:
     branches: [ "master" ]
+    tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ "master" ]
 
