--- a/.github/workflows/release-docker-image.yml
+++ b/.github/workflows/release-docker-image.yml
@@ -12,25 +12,32 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v4
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: Release ${{ steps.tag_version.outputs.new_tag }}
+          body: ${{ steps.tag_version.outputs.changelog }}
+
       -
         name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Extract version and set it to tag
-        run: |
-             echo "TAG=${GITHUB_REF:10}" >> $GITHUB_ENV
 
       - uses: mr-smithers-excellent/docker-build-push@v3
         name: Build & push Docker image
         with:
           image: araheemcis/numberadd
-        #  tags: |
-         #      ${{ vars.DOCKERHUB_USERNAME }}:latest
-         #      ${{ vars.DOCKERHUB_USERNAME }}:${{ env.TAG }}
-          tag_names: true
+          tags: |
+               ${{ steps.tag_version.outputs.new_tag }}           
+          
           registry: docker.io
           #dockerfile: Dockerfile.ci
           username: ${{ vars.DOCKERHUB_USERNAME}}
