--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,13 +19,18 @@ jobs:
       with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+      -
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
           
-    - name: "Build and push image tags"
-      uses: "docker/build=push-action@v6"
+    - name: Build and push image tags
+      uses: docker/build-push-action@v6
       with:
-        context: "*"
-        push: true
-        tags: |
+         push: true
+         tags: |
            "${{ github.repository }}:latest"
            "${{ github.repository }}:${{ github.ref_name }}
       
