--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Publish
+name: Docker Publish with tags
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 jobs:
  
-  build-and-push-image:
+  build-and-push-image with tags:
     runs-on: ubuntu-latest
 
     steps:
