--- a/.github/workflows/docker-image-with-tags.yml
+++ b/.github/workflows/docker-image-with-tags.yml
@@ -19,13 +19,13 @@ jobs:
       with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+    - name: "Set up QEMU"
+      uses: "docker/setup-qemu-action@v3"
+    - name: "Set up Docker Buildx"
+      uses: "docker/setup-buildx-action@v3"
           
-    - name: Build and push image tags
-      uses: docker/build-push-action@v6
+    - name: "Build and push image tags"
+      uses: "docker/build-push-action@v6"
       with:
          push: true
          tags: |
