--- a/.github/workflows/docker-image-with-tags.yml
+++ b/.github/workflows/docker-image-with-tags.yml
@@ -29,6 +29,6 @@ jobs:
          push: true
          tags: |
            "${{ github.repository }}:latest"
-           "${{ github.repository }}:${{ github.ref_name }}
+           "${{ github.repository }}:${{ github.ref_name }}"
       
     
