--- a/.github/workflows/f1.1-build-push-ci.yml
+++ b/.github/workflows/f1.1-build-push-ci.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
        - f1.1
-    tags: 
-        - "f*"
+ #   tags: 
+  #      - "f*"
   #workflow_dispatch:
 jobs:
  
