--- a/.github/workflows/v1.3-tag-build-push-ci.yaml
+++ b/.github/workflows/v1.3-tag-build-push-ci.yaml
@@ -29,4 +29,15 @@ jobs:
          push: true
          tags: |
            "${{ github.repository }}:${{ github.ref_name }}"
+           
+    - name: Update values.yaml
+      run: |
+          git clone git@github.com:araheemcis/k8-repo.git
+          cd helm/project1-chart
+          sed -i 's|tag:.*|tag: '${{ github.ref_name }}'|' values.yaml 
+          git config --global user.name 'Abdul Raheem'
+          git config --global user.email 'araheemcis@gmail.com'
+          git add values.yaml
+          git commit -m "Update values.yaml"
+          git push
 
