--- a/.github/workflows/v1.3-tag-build-push-ci.yaml
+++ b/.github/workflows/v1.3-tag-build-push-ci.yaml
@@ -34,7 +34,7 @@ jobs:
       uses: actions/checkout@master
       with:
           repository: araheemcis/k8-repo
-          token: ${{ GIT_HUB_TOKEN_K8-REPO }}
+#          token: ${{ GIT_HUB_TOKEN_K8-REPO }}
 
            
     - name: Update values.yaml
