--- a/.github/workflows/v1.3-tag-build-push-ci.yaml
+++ b/.github/workflows/v1.3-tag-build-push-ci.yaml
@@ -30,6 +30,11 @@ jobs:
          tags: |
            "${{ github.repository }}:${{ github.ref_name }}"
 
+    - name: "Checkout again"
+      uses: actions/checkout@v3
+      with:
+        ref: ${{ github.repository }}
+
 
            
     - name: Update values.yaml
