--- a/.github/workflows/build-push-cicd-tags.yaml
+++ b/.github/workflows/build-push-cicd-tags.yaml
@@ -40,7 +40,9 @@ jobs:
 
     steps:
     - name: Check out code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+      with:
+       ref: ${{ github.repository }}
 
     - name: Update Image Tag Values in values.yaml
       run: |
