--- a/.github/workflows/build-push-cicd-tags.yaml
+++ b/.github/workflows/build-push-cicd-tags.yaml
@@ -40,7 +40,9 @@ jobs:
 
     steps:
     - name: Check out code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
+      with:
+        ref: master
 
     - name: "Get the current branch"
       run: |
