--- a/helm/project1-chart/templates/app1-deployment.yaml
+++ b/helm/project1-chart/templates/app1-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Release.Name }}-app1
+  namespace: project1
   labels:
     app: app1
 spec:
