--- a/app.yaml
+++ b/app.yaml
@@ -1,1 +1,12 @@
 runtime: python38
+from flask import Flask
+
+app = Flask(__name__)
+
+@app.route('/')
+def hello():
+    return "Hello, World!"
+
+if __name__ == '__main__':
+    app.run(debug=True, port=5001)  # Change 5001 to any unused port
+
