--- a/helm/testchart/values.yaml
+++ b/helm/testchart/values.yaml
@@ -15,6 +15,7 @@ image:
 port: 5001
 targetPort: 5001
 nodePort: 30883
+namespace: testns
 
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
